--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
         </div>
     </nav>
 
-    <!-- ================= HERO SECTION (FIXED PADDING) ================= -->
-    <!-- ZMIANA TUTAJ: Q&pd-140-px-t (zwiększone ze 100px, żeby badge nie wchodził pod menu) -->
-    <header class="Q&pos-relative Q&pd-140-px-t Q&pd-40-px-b md:Q&pd-200-px-t md:Q&pd-100-px-b Q&txt-center Q&ov-hidden">
+    <!-- ================= HERO SECTION (POPRAWKA MOBILE) ================= -->
+    <!-- ZMIENIONO: Q&pd-180-px-t dla Mobile. To da bardzo duży odstęp od góry -->
+    <header class="Q&pos-relative Q&pd-180-px-t Q&pd-40-px-b md:Q&pd-200-px-t md:Q&pd-100-px-b Q&txt-center Q&ov-hidden">
         
         <!-- Tło -->
         <div class="Q&pos-absolute Q&t-0 Q&l-50-p Q&w-100-p Q&mw-1000-px Q&h-600-px Q&bg-blue Q&op-0.08 Q&br-50-p Q&blur-80-px Q&z--1" style="transform: translate(-50%, -50%);"></div>
 
         <div class="Q&mw-1200-px Q&mg-auto Q&pd-20-px">
             
-            <!-- Badge -->
-            <div class="Q&d-inline-flex Q&fx-wrap Q&jc-center Q&ai-center Q&gap-8-px Q&bg-set-1e293b Q&pd-6-px Q&pd-12-px-rgt Q&br-50-px Q&bd-1-px-solid-set-334155 Q&mg-20-px-dwn md:Q&mg-30-px-dwn --hover-Q&bd-1-px-solid-blue Q&trans-0.2 Q&cursor-pointer Q&mw-100-p">
-                <span class="Q&badge-purple">UPDATE v3.1</span>
+            <!-- Badge (ZMIENIONO: dodano Q&mg-20-px-t, aby odepchnąć go dodatkowo) -->
+            <div class="Q&d-inline-flex Q&fx-wrap Q&jc-center Q&ai-center Q&gap-8-px Q&bg-set-1e293b Q&pd-6-px Q&pd-12-px-rgt Q&br-50-px Q&bd-1-px-solid-set-334155 Q&mg-20-px-dwn md:Q&mg-30-px-dwn Q&mg-20-px-t --hover-Q&bd-1-px-solid-blue Q&trans-0.2 Q&cursor-pointer Q&mw-100-p">
+                <span class="Q&badge-purple">UPDATE v3.0</span>
                 <span class="Q&fs-1 Q&clr-slate Q&ws-normal Q&ta-center">Nowe komponenty & RWD &rarr;</span>
             </div>
 
