--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="Q&mw-1200-px Q&mg-auto Q&pd-20-px">
             
             <!-- BADGE NAPRAWIONY - RWD TEXT -->
-            <div class="Q&d-inline-flex Q&ai-center Q&jc-center Q&gap-8-px Q&bg-set-1e293b Q&pd-4-px Q&pd-12-px-rgt Q&br-50-px Q&bd-1-px-solid-set-334155 Q&mg-20-px-dwn md:Q&mg-30-px-dwn --hover-Q&bd-1-px-solid-blue Q&trans-0.2 Q&cursor-pointer Q&mw-100-p">
+            <div class="Q&d-inline-flex Q&ai-center Q&jc-center Q&gap-8-px Q&bg-set-1e293b Q&pd-4-px Q&pd-12-px-rgt Q&br-50-px Q&bd-1-px-solid-set-334155 Q&mg-20-px-dwn md:Q&mg-30-px-dwn --hover-Q&bd-1-px-solid-blue Q&trans-0.2 Q&cursor-pointer Q&mw-100-p Q&mg-20-px-up">
                 
                 <!-- Tag -->
                 <span class="Q&badge-purple Q&ws-nowrap">v3.0</span>
