--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             
             <!-- Przycisk Prawy -->
             <div class="Q&d-flex Q&gap-10-px">
-                <button class="Q&btn-primary-sm Q&sh-lg">Pobierz v4.0</button>
+                <button class="Q&btn-primary-sm Q&sh-lg">Pobierz v.Y25R01-01</button>
             </div>
         </div>
     </nav>
@@ -56,7 +56,7 @@
             
             <!-- Badge NAPRAWIONY (Ukryty tekst na mobile) -->
             <div class="Q&d-inline-flex Q&ai-center Q&jc-center Q&gap-8-px Q&bg-set-1e293b Q&pd-4-px Q&pd-12-px-rgt Q&br-50-px Q&bd-1-px-solid-set-334155 Q&mg-20-px-dwn md:Q&mg-30-px-dwn Q&mg-20-px-t --hover-Q&bd-1-px-solid-blue Q&trans-0.2 Q&cursor-pointer Q&mw-100-p">
-                <span class="Q&badge-blue Q&ws-nowrap">v4.0 ENTERPRISE</span>
+                <span class="Q&badge-blue">v4.0 ENTERPRISE</span>
                 <!-- Tylko na desktopie tekst -->
                 <span class="Q&fs-1 Q&clr-slate Q&d-none md:Q&d-inline">Tabele, Formularze i Gradienty →</span>
             </div>
