--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QozaUI - Enterprise Framework</title>
+    <title>QozaUI – A badass framework for your websites</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;800&display=swap" rel="stylesheet">
     <style>
         /* BAZA */
@@ -91,19 +91,19 @@
                 <span class="Q&fs-3 md:Q&fs-4 Q&fw-800 Q&ls-0.5-px Q&clr-white">Qoza<span class="Q&clr-blue">UI</span></span>
             </a>
             <div class="Q&d-none md:Q&d-flex Q&gap-30-px Q&fs-2 Q&fw-500 Q&clr-slate">
-                <a href="components.html" class="nav-link Q&cursor-pointer Q&td-none Q&clr-current --hover-Q&clr-white Q&trans-0.2">Komponenty</a>
-                <a href="docs.html" class="nav-link Q&cursor-pointer Q&td-none Q&clr-current --hover-Q&clr-white Q&trans-0.2">Dokumentacja</a>
+                <a href="components.html" class="nav-link Q&cursor-pointer Q&td-none Q&clr-current --hover-Q&clr-white Q&trans-0.2">Components</a>
+                <a href="docs.html" class="nav-link Q&cursor-pointer Q&td-none Q&clr-current --hover-Q&clr-white Q&trans-0.2">Documentation</a>
             </div>
             <div class="Q&d-flex Q&ai-center Q&gap-10-px">
                 <button id="theme-btn" class="Q&btn-ghost-sm Q&clr-slate --hover-Q&clr-white Q&pd-8-px"><span id="theme-icon">💻</span></button>
-                <a href="download.html" class="Q&d-none sm:Q&d-inline-flex"><button class="Q&btn-primary-sm Q&sh-lg --hover-Q&scale-105">Pobierz</button></a>
+                <a href="download.html" class="Q&d-none sm:Q&d-inline-flex"><button class="Q&btn-primary-sm Q&sh-lg --hover-Q&scale-105">Download</button></a>
                 <button id="menu-btn" class="Q&btn-ghost-sm Q&d-flex md:Q&d-none Q&fs-4 Q&clr-white">≡</button>
             </div>
         </div>
         <div id="mobile-menu" class="Q&d-none Q&bg-set-0f172a Q&bd-1-px-solid-set-1e293b-t Q&pd-20-px Q&fx-col Q&gap-15-px Q&sh-xl">
-            <a href="components.html" class="Q&fs-3 Q&fw-600 Q&clr-white Q&td-none">Komponenty</a>
-            <a href="docs.html" class="Q&fs-3 Q&fw-600 Q&clr-white Q&td-none">Dokumentacja</a>
-            <a href="download.html" class="Q&btn-primary-md Q&w-100-p Q&txt-center">Pobierz</a>
+            <a href="components.html" class="Q&fs-3 Q&fw-600 Q&clr-white Q&td-none">Components</a>
+            <a href="docs.html" class="Q&fs-3 Q&fw-600 Q&clr-white Q&td-none">Documentation</a>
+            <a href="download.html" class="Q&btn-primary-md Q&w-100-p Q&txt-center">Download</a>
         </div>
     </nav>
 
@@ -113,18 +113,18 @@
             <div class="dark-only Q&pos-absolute Q&t-0 Q&l-50-p Q&w-100-p Q&mw-1000-px Q&h-600-px Q&bg-blue Q&op-0.08 Q&br-50-p Q&blur-90-px Q&z--1" style="transform: translate(-50%, -50%);"></div>
             <div class="Q&mw-1200-px Q&mg-auto Q&pd-20-px">
                 <div class="Q&d-inline-flex Q&ai-center Q&jc-center Q&gap-8-px Q&bg-set-1e293b Q&pd-4-px Q&pd-12-px-rgt Q&br-50-px Q&bd-1-px-solid-set-334155 Q&mg-20-px-dwn md:Q&mg-30-px-dwn Q&mg-20-px-t --hover-Q&bd-1-px-solid-blue Q&trans-0.2 Q&cursor-pointer Q&mw-95-p Q&ov-hidden">
-                    <span class="Q&badge-blue Q&ws-nowrap Q&shrink-0">v4.5</span>
-                    <span class="Q&fs-1 Q&clr-slate Q&d-inline md:Q&d-none Q&ws-nowrap">Nowości →</span>
-                    <span class="Q&fs-1 Q&clr-slate Q&d-none md:Q&d-inline Q&ws-nowrap">Tabele, Formularze i Gradienty →</span>
+                    <span class="Q&badge-blue Q&ws-nowrap Q&shrink-0">v. Y25R01-01</span>
+                    <span class="Q&fs-1 Q&clr-slate Q&d-inline md:Q&d-none Q&ws-nowrap">News →</span>
+                    <span class="Q&fs-1 Q&clr-slate Q&d-none md:Q&d-inline Q&ws-nowrap">Tables, Forms and Gradients →</span>
                 </div>
                 <h1 class="Q&fs-7 sm:Q&fs-9 md:Q&fs-11 Q&fw-800 Q&lh-1.1 Q&mg-20-px-dwn Q&ls--1-px Q&clr-white">
-                    Kompletny Framework<br>
-                    <span class="Q&clr-transparent" style="-webkit-background-clip: text; background-clip: text; background-image: linear-gradient(to right, #3b82f6, #a855f7);">dla Twojego Biznesu.</span>
+                    A modern framework<br>
+                    <span class="Q&clr-transparent" style="-webkit-background-clip: text; background-clip: text; background-image: linear-gradient(to right, #3b82f6, #a855f7);">for your websites.</span>
                 </h1>
-                <p class="Q&fs-2 md:Q&fs-4 Q&clr-slate Q&mw-700-px Q&mg-auto Q&mg-30-px-dwn Q&lh-1.6">Teraz z obsługą tabel, rozbudowanych formularzy (Radio, Checkbox), Modali i animacji ładowania. Gotowy na duże projekty.</p>
+                <p class="Q&fs-2 md:Q&fs-4 Q&clr-slate Q&mw-700-px Q&mg-auto Q&mg-30-px-dwn Q&lh-1.6">You no longer need to create a thousand classes to style your pages nicely. You can easily adjust the appearance using simple classes or use ready-made templates.</p>
                 <div class="Q&d-flex Q&fx-col sm:Q&fx-row Q&jc-center Q&gap-15-px">
-                    <button onclick="window.location.href='download.html'" class="Q&btn-primary-lg Q&sh-xl --hover-Q&ty--2-px">Rozpocznij Projekt</button>
-                    <button onclick="window.location.href='docs.html'" class="Q&btn-dark-lg Q&bd-1-px-solid-set-334155 --hover-Q&bg-set-1e293b">Dokumentacja</button>
+                    <button onclick="window.location.href='download.html'" class="Q&btn-primary-lg Q&sh-xl --hover-Q&ty--2-px">Start the Project</button>
+                    <button onclick="window.location.href='docs.html'" class="Q&btn-dark-lg Q&bd-1-px-solid-set-334155 --hover-Q&bg-set-1e293b">Documentation</button>
                 </div>
             </div>
         </header>
@@ -134,43 +134,33 @@
             <div class="Q&d-grid Q&cols-1 lg:Q&cols-2 Q&gap-40-px">
                 <!-- KOLUMNA 1 -->
                 <div class="Q&d-flex Q&fx-col Q&gap-30-px">
-                    <div class="Q&fs-5 Q&fw-bold Q&mg-10-px-dwn Q&clr-white">Zaawansowane Formularze</div>
+                    <div class="Q&fs-5 Q&fw-bold Q&mg-10-px-dwn Q&clr-white">Example form appearance</div>
                     <div class="Q&card-dark Q&pd-25-px Q&sh-xl">
                         <div class="Q&d-grid Q&cols-1 md:Q&cols-2 Q&gap-20-px">
-                            <div><label class="Q&fs-1 Q&fw-bold Q&clr-slate Q&d-block Q&mg-8-px-dwn">IMIĘ</label><input type="text" class="Q&input-dark" placeholder="Jan"></div>
-                            <div><label class="Q&fs-1 Q&fw-bold Q&clr-slate Q&d-block Q&mg-8-px-dwn">NAZWISKO</label><input type="text" class="Q&input-dark" placeholder="Kowalski"></div>
+                            <div><label class="Q&fs-1 Q&fw-bold Q&clr-slate Q&d-block Q&mg-8-px-dwn">First Name</label><input type="text" class="Q&input-dark" placeholder="Michael"></div>
+                            <div><label class="Q&fs-1 Q&fw-bold Q&clr-slate Q&d-block Q&mg-8-px-dwn">Last Name</label><input type="text" class="Q&input-dark" placeholder="Nowak"></div>
                         </div>
-                        <div class="Q&mg-20-px-y"><label class="Q&fs-1 Q&fw-bold Q&clr-slate Q&d-block Q&mg-8-px-dwn">ROLA</label><select class="Q&select"><option>Administrator</option><option>Użytkownik</option></select></div>
+                        <div class="Q&mg-20-px-y"><label class="Q&fs-1 Q&fw-bold Q&clr-slate Q&d-block Q&mg-8-px-dwn">Role</label><select class="Q&select"><option>Administrator</option><option>User</option></select></div>
                         <div class="Q&d-flex Q&gap-20-px Q&mg-20-px-dwn">
                             <label class="Q&d-flex Q&ai-center Q&gap-10-px Q&cursor-pointer"><input type="radio" name="plan" class="Q&radio" checked><span class="Q&fs-2 Q&clr-white">Free</span></label>
                             <label class="Q&d-flex Q&ai-center Q&gap-10-px Q&cursor-pointer"><input type="radio" name="plan" class="Q&radio"><span class="Q&fs-2 Q&clr-white">Pro</span></label>
                         </div>
-                        <button class="Q&btn-primary-md Q&w-100-p">Zarejestruj</button>
+                        <button class="Q&btn-primary-md Q&w-100-p">Register</button>
                     </div>
                 </div>
                 <!-- KOLUMNA 2 -->
                 <div class="Q&d-flex Q&fx-col Q&gap-30-px">
-                    <div class="Q&fs-5 Q&fw-bold Q&mg-10-px-dwn Q&clr-white">Dane i Modale</div>
+                    <div class="Q&fs-5 Q&fw-bold Q&mg-10-px-dwn Q&clr-white">Example Table and Modal Designs</div>
                     <div class="Q&card-dark Q&ov-hidden Q&sh-xl">
-                        <div class="Q&pd-20-px Q&bd-1-px-solid-set-334155-b Q&d-flex Q&jc-sb Q&ai-center"><span class="Q&fw-bold Q&clr-white">Ostatnie Transakcje</span></div>
+                        <div class="Q&pd-20-px Q&bd-1-px-solid-set-334155-b Q&d-flex Q&jc-sb Q&ai-center"><span class="Q&fw-bold Q&clr-white">Recent Transactions</span></div>
                         <div class="Q&ovx-auto">
                             <table class="Q&table-dark">
-                                <thead><tr class="Q&bg-set-0f172a"><th>Status</th><th>Klient</th><th>Data</th></tr></thead>
-                                <tbody><tr><td><span class="Q&badge-blue">W toku</span></td><td>Anna N.</td><td>11 Lis</td></tr><tr><td><span class="Q&badge-green">Gotowe</span></td><td>Jan K.</td><td>12 Lis</td></tr></tbody>
+                                <thead><tr class="Q&bg-set-0f172a"><th>Status</th><th>Client</th><th>Date</th></tr></thead>
+                                <tbody><tr><td><span class="Q&badge-blue">In Progress</span></td><td>Anna N.</td><td>Nov 11</td></tr><tr><td><span class="Q&badge-green">Completed</span></td><td>Jan K.</td><td>Nov 12</td></tr></tbody>
                             </table>
                         </div>
                     </div>
-                    <div class="Q&pos-relative Q&h-300-px Q&br-16-px Q&ov-hidden Q&bd-1-px-solid-set-334155">
-                        <div class="Q&pos-absolute Q&inset-0 Q&bg-set-0f172a Q&d-flex Q&jc-center Q&ai-center"><button class="Q&btn-dark-md">Otwórz Modal</button></div>
-                        <div class="Q&modal Q&pos-absolute Q&z-10">
-                            <div class="Q&modal-box Q&sh-xl">
-                                <div class="Q&d-flex Q&jc-sb Q&ai-center Q&mg-20-px-dwn"><h3 class="Q&fs-4 Q&fw-bold Q&clr-white">Potwierdzenie</h3><span class="Q&cursor-pointer Q&fs-4 Q&clr-slate">&times;</span></div>
-                                <p class="Q&clr-slate Q&lh-1.5 Q&mg-20-px-dwn">Czy na pewno chcesz usunąć ten projekt?</p>
-                                <div class="Q&d-flex Q&jc-end Q&gap-10-px"><button class="Q&btn-outline-sm">Anuluj</button><button class="Q&btn-danger-sm">Usuń</button></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    
             </div>
         </section>
     </main>
