--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <header class="Q&pos-relative Q&pd-160-px-t Q&pd-60-px-b md:Q&pd-200-px-t md:Q&pd-100-px-b Q&txt-center Q&ov-hidden">
             <div class="dark-only Q&pos-absolute Q&t-0 Q&l-50-p Q&w-100-p Q&mw-1000-px Q&h-600-px Q&bg-blue Q&op-0.08 Q&br-50-p Q&blur-90-px Q&z--1" style="transform: translate(-50%, -50%);"></div>
             <div class="Q&mw-1200-px Q&mg-auto Q&pd-20-px">
-                <div class="Q&d-inline-flex Q&ai-center Q&jc-center Q&gap-8-px Q&bg-set-1e293b Q&pd-4-px Q&pd-12-px-rgt Q&br-50-px Q&bd-1-px-solid-set-334155 Q&mg-20-px-dwn md:Q&mg-30-px-dwn Q&mg-20-px-t --hover-Q&bd-1-px-solid-blue Q&trans-0.2 Q&cursor-pointer Q&mw-95-p Q&ov-hidden">
+                <div class="Q&d-inline-flex Q&ai-center Q&jc-center Q&gap-8-px Q&bg-set-1e293b Q&pd-6-px-up Q&pd-11-px-dwn Q&pd-14-px-rgt Q&pd-10-px-lft Q&br-50-px Q&bd-1-px-solid-set-334155 Q&mg-20-px-dwn md:Q&mg-30-px-dwn Q&mg-20-px-t --hover-Q&bd-1-px-solid-blue Q&trans-0.2 Q&cursor-pointer Q&mw-95-p Q&ov-hidden">
                     <span class="Q&badge-blue Q&ws-nowrap Q&shrink-0">v. Y25R01-01</span>
                     <span class="Q&fs-1 Q&clr-slate Q&d-inline md:Q&d-none Q&ws-nowrap">News →</span>
                     <span class="Q&fs-1 Q&clr-slate Q&d-none md:Q&d-inline Q&ws-nowrap">Tables, Forms and Gradients →</span>
