--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
         <div class="Q&mw-1200-px Q&mg-auto Q&pd-20-px Q&d-flex Q&fx-col md:Q&fx-row Q&jc-sb Q&ai-center Q&gap-20-px">
             <p class="Q&clr-slate Q&fs-1">© 2023 Qoza Systems</p>
             <div class="Q&d-flex Q&gap-25-px Q&fs-1 Q&clr-slate">
-                <a href="#" class="footer-link Q&td-none Q&clr-current --hover-Q&clr-white">GitHub</a>
-                <a href="#" class="footer-link Q&td-none Q&clr-current --hover-Q&clr-white">Twitter</a>
+                <a href="https://discord.gg/YzcBM7MUZy" class="footer-link Q&td-none Q&clr-current --hover-Q&clr-white">Discord</a>
+                <a href="https://x.com/MrKazanek" class="footer-link Q&td-none Q&clr-current --hover-Q&clr-white">Twitter</a>
             </div>
         </div>
     </footer>
