--- a/download.html
+++ b/download.html
@@ -84,7 +84,6 @@
     <!-- NAV -->
     <nav class="Q&pos-fixed Q&t-0 Q&l-0 Q&w-100-p Q&z-100 Q&bg-set-0f172acc Q&bblur-12-px Q&bd-1-px-solid-set-1e293b-dwn Q&trans-0.3">
         <div class="Q&mw-1200-px Q&mg-auto Q&pd-15-px Q&pd-20-px-x Q&d-flex Q&jc-sb Q&ai-center">
-            <!-- LOGO ZMIENIONE NA LINK DO INDEX.HTML -->
             <a href="index.html" class="logo-link Q&d-flex Q&ai-center Q&gap-10-px Q&cursor-pointer Q&td-none --hover-Q&op-0.8 Q&trans-0.2">
                 <div class="Q&w-32-px Q&h-32-px md:Q&w-36-px md:Q&h-36-px Q&grad-br-blue-purple Q&br-8-px Q&d-flex Q&jc-center Q&ai-center Q&sh-lg">
                     <span class="Q&fs-3 md:Q&fs-4 Q&fw-800 Q&clr-white">Q</span>
@@ -97,7 +96,6 @@
             </div>
             <div class="Q&d-flex Q&ai-center Q&gap-10-px">
                 <button id="theme-btn" class="Q&btn-ghost-sm Q&clr-slate --hover-Q&clr-white Q&pd-8-px"><span id="theme-icon">💻</span></button>
-                <!-- Button Download jest disabled/ukryty bo tu jesteśmy -->
                 <button id="menu-btn" class="Q&btn-ghost-sm Q&d-flex md:Q&d-none Q&fs-4 Q&clr-white">≡</button>
             </div>
         </div>
@@ -112,9 +110,12 @@
         <div class="Q&mw-800-px Q&mg-auto Q&pd-20-px">
             
             <!-- HEADER SEKCJI -->
-            <div class="Q&txt-center Q&mg-40-px-dwn">
+            <div class="Q&txt-center Q&mg-30-px-dwn">
                 <h1 class="Q&fs-8 md:Q&fs-10 Q&fw-800 Q&lh-1.1 Q&mg-20-px-dwn Q&clr-white">Get Qoza<span class="Q&clr-blue">UI</span></h1>
-                <p class="Q&fs-3 Q&clr-slate Q&mw-600-px Q&mg-auto">Import the framework with a single line of code and start building modern interfaces instantly.</p>
+                <!-- INSTRUKCJA PRZENIESIONA NAD KARTĘ -->
+                <p class="Q&fs-3 Q&clr-slate Q&mw-600-px Q&mg-auto Q&lh-1.6">
+                    To install QozaUI, simply download the file or copy the link below and place the following script tag in your HTML file just before the closing <code class="Q&bg-set-1e293b Q&pd-4-px Q&br-4-px">body</code> tag.
+                </p>
             </div>
 
             <!-- KARTA POBIERANIA -->
@@ -131,15 +132,10 @@
                         </select>
                     </div>
 
-                    <!-- Instrukcja -->
-                    <div class="Q&bd-1-px-solid-set-334155-b Q&pd-20-px-b">
-                        <p class="Q&fs-2 Q&clr-white Q&lh-1.5">To install QozaUI, simply download the `.js` file (or host it yourself) and place the following script tag in your HTML file just before the closing <code class="Q&bg-set-1e293b Q&pd-4-px Q&br-4-px">&lt;/body&gt;</code> tag.</p>
-                    </div>
-
                     <!-- Pole z kodem -->
                     <div class="Q&pos-relative">
                         <div class="code-block Q&bg-set-0b1120 Q&pd-20-px Q&br-8-px Q&bd-1-px-solid-set-334155 Q&ovx-auto">
-                            <code id="code-display" class="Q&sft-mono Q&fs-2 Q&clr-blue">&lt;script src="Y25R01-01.js"&gt;&lt;/script&gt;</code>
+                            <code id="code-display" class="Q&sft-mono Q&fs-2 Q&clr-blue">&lt;script src="https://qozaui.netlify.app/Y25R01-01.js"&gt;&lt;/script&gt;</code>
                         </div>
                         <div class="Q&mg-15-px-t Q&d-flex Q&jc-end">
                             <button id="copy-btn" class="Q&btn-primary-sm Q&d-flex Q&ai-center Q&gap-8-px">
@@ -155,24 +151,7 @@
                 </div>
             </div>
 
-            <!-- Features List Small -->
-            <div class="Q&mg-50-px-t Q&d-grid Q&cols-1 sm:Q&cols-3 Q&gap-20-px">
-                <div class="Q&txt-center">
-                    <div class="Q&fs-5 Q&mg-10-px-dwn">⚡</div>
-                    <div class="Q&fs-2 Q&fw-bold Q&clr-white">Fast Loading</div>
-                    <div class="Q&fs-1 Q&clr-slate">Less than 10KB gzipped</div>
-                </div>
-                <div class="Q&txt-center">
-                    <div class="Q&fs-5 Q&mg-10-px-dwn">🎨</div>
-                    <div class="Q&fs-2 Q&fw-bold Q&clr-white">Theme Ready</div>
-                    <div class="Q&fs-1 Q&clr-slate">Auto dark & light mode</div>
-                </div>
-                <div class="Q&txt-center">
-                    <div class="Q&fs-5 Q&mg-10-px-dwn">🔧</div>
-                    <div class="Q&fs-2 Q&fw-bold Q&clr-white">Utility First</div>
-                    <div class="Q&fs-1 Q&clr-slate">Build layouts without CSS</div>
-                </div>
-            </div>
+            <!-- Usunięto sekcję "Features" (Fast Loading itp.) -->
 
         </div>
     </main>
@@ -189,7 +168,7 @@
     </footer>
 
     <script>
-        // --- THEME LOGIC (Identyczna jak w index.html) ---
+        // --- THEME LOGIC ---
         const themeBtn = document.getElementById('theme-btn');
         const themeIcon = document.getElementById('theme-icon');
         const menuBtn = document.getElementById('menu-btn');
@@ -228,11 +207,12 @@
         const codeDisplay = document.getElementById('code-display');
         const copyBtn = document.getElementById('copy-btn');
         const copyText = document.getElementById('copy-text');
+        const baseUrl = 'https://qozaui.netlify.app/';
 
-        // Aktualizacja kodu po zmianie wersji
+        // Aktualizacja kodu po zmianie wersji z prefiksem URL
         versionSelect.addEventListener('change', (e) => {
             const version = e.target.value;
-            codeDisplay.innerText = `<script src="${version}"><\/script>`;
+            codeDisplay.innerText = `<script src="${baseUrl}${version}"><\/script>`;
         });
 
         // Funkcja kopiowania
@@ -241,7 +221,7 @@
             navigator.clipboard.writeText(codeToCopy).then(() => {
                 const originalText = copyText.innerText;
                 copyText.innerText = "Copied!";
-                copyBtn.classList.add('Q&bg-set-10b981', 'Q&bd-1-px-solid-set-10b981'); // Zielony kolor z bazy frameworka (emerald)
+                copyBtn.classList.add('Q&bg-set-10b981', 'Q&bd-1-px-solid-set-10b981'); 
                 
                 setTimeout(() => {
                     copyText.innerText = originalText;
