--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download – QozaUI</title>
+    <title>QozaUI - Download</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;800&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="logo.png">
     <style>
@@ -126,8 +126,7 @@
                         <label class="Q&fs-1 Q&fw-bold Q&clr-slate Q&d-block Q&mg-8-px-dwn">Select Version</label>
                         <select id="version-select" class="Q&select">
                             <option value="Y25R01-01.js" selected>v. Y25R01-01 (Latest)</option>
-                            <option value="Y24R12-05.js">v. Y24R12-05 (Stable)</option>
-                            <option value="Y24R11-02.js">v. Y24R11-02 (Legacy)</option>
+                            
                         </select>
                     </div>
 
